# plush

./: .gitignore  NOTES  README  Setup.hs  TODO  alltests.sh  history notes  plush.cabal  plush.lkshw
admin/: check-notices.sh
admin/notices/: notice.css  notice.doctest  notice.hs  notice.html  notice.js  notice.sh
data/: env  profile  summaries.txt
src/: Main.hs  Recho.hs  main.c
src-main/: Main.hs  Recho.hs
src/Control/Monad/: Exception.hs
src/Plush/: ArgParser.hs  DocTest.hs  Job.hs  Main.hs  Parser.hs  Pretty.hs  Resource.hs  Run.hs  Server.hs  Types.hs  Utilities.hs
src/Plush/DocTest/: Posix.hs
src/Plush/Job/: History.hs  Output.hs  StdIO.hs  Types.hs
src/Plush/Parser/: Aliases.hs  Base.hs  Commands.hs  Commands.hs-boot  Tokens.hs
src/Plush/Run/: Annotate.hs  BuiltIns.hs  BuiltIns.hs-boot  Command.hs  Execute.hs  Execute.hs-boot  ExecuteType.hs  Expansion.hs  Pattern.hs  Posix.hs  Redirection.hs  Script.hs  Script.hs-boot  ShellExec.hs  ShellFlags.hs  TestExec.hs  Types.hs
src/Plush/Run/BuiltIns/: Control.hs  Evaluation.hs  FileSystem.hs  Grep.hs  Plush.hs  ScriptTools.hs  ShellState.hs  Syntax.hs  Text.hs  Trivial.hs  Utilities.hs  WorkingDirectory.hs
src/Plush/Run/Expansion/: Arithmetic.hs  Types.hs
src/Plush/Run/Posix/: IO.hs  Return.hs  Utilities.hs
src/Plush/Server/: API.hs  Remote.hs  Status.hs  Utilities.hs  Warp.hs  WebServer.hs
src/Plush/Types/: CommandSummary.hs
src/System/Posix/: Missing.hsc
static/: help.html  index.html
static/css/: plush.css
static/js/: Job.js  annotation.js  api.js  app.build.js  app.js  cterm.js  cwd.js  dir-status.js  env-status.js  help.js  history.js  hterm.js  input.js  jobs.js  keys.js  ls-status.js  main.build.js  main.js  router.js  shell.js  status.js  svn-status.js  template.js  util.js
static/js/collections/: jobs.js
static/js/libs/: README
static/js/libs/hterm/: LICENSE  hterm.js  hterm_deps.js  terminal.js
static/js/models/: job.js
static/js/views/: job.js  jobs.js  main.js  search.js
static/templates/: job.html  jobs.html  main.html  search.html
tests/: aliases.doctest  arithmetic.doctest  basic.doctest  case.doctest  commandsubstitution.doctest  doctest.doctest  echo.doctest  evalutation.doctest  fieldsplitting.doctest  filename.doctest  flags.doctest  flowcontrol.doctest  for-loop.doctest  function.doctest  funs.doctest  grep.doctest  grouping.doctest  heredoc.doctest  if.doctest  loop.doctest  parameter.doctest  pipeline.doctest  positionalparameters.doctest  quote.doctest  read.doctest  redirection.doctest  set.doctest  shellerrors.doctest  simple.sh  specialparameters.doctest  subshell.doctest  text.doctest  tilde.doctest  utf8.txt  vars.doctest
