Name:            plush
Version:         0.4.0.0
License:         OtherLicense
License-file:    LICENSE
Author:          Mark Lentczner
Maintainer:      markl@glyphic.com
Category:        Utility
Build-type:      Custom
Cabal-version:   >=1.8
Synopsis:        the comfy shell
Description:
    Plush is a shell with a modern interface: a web page.

Data-files:
  data/summaries.txt
  data/profile
  data/env
  static/audio/*.ogg
  static/css/*.css
  static/css/*.gif
  static/css/*.png
  static/img/*.png
  static/*.html
  static/js/*.js
  static/js/libs/hterm/*.js
  static/js/libs/jquery/*.js
  static/js/libs/require/*.js
  static/js/libs/underscore/*.js
  tests/*.doctest
  tests/*.sh
  tests/*.txt

Extra-source-files:
  README
  alltests.sh
  static/js/libs/README
  static/js/libs/jquery/MIT-LICENSE
  static/js/libs/hterm/LICENSE
  static/js/libs/require/LICENSE
  static/js/libs/underscore/LICENSE
  static/js/main.build.js


Flag live-files
  Description:
    Plush loads data files and serves static files from the datadir.
    This allows development of those files without rebuilding plush.
  Default: False


Library
  hs-source-dirs: src

  Exposed-modules:
    Plush.Main

  Other-modules:
    Control.Monad.Exception
    Paths_plush
    Plush.ArgParser
    Plush.DocTest
    Plush.Job
    Plush.Job.History
    Plush.Job.Output
    Plush.Job.StdIO
    Plush.Job.Types
    Plush.Parser.Aliases
    Plush.Parser.Base
    Plush.Parser.Commands
    Plush.Parser.Tokens
    Plush.Parser
    Plush.Pretty
    Plush.Resource
    Plush.Run.Annotate
    Plush.Run.BuiltIns
    Plush.Run.BuiltIns.Control
    Plush.Run.BuiltIns.Evaluation
    Plush.Run.BuiltIns.FileSystem
    Plush.Run.BuiltIns.Grep
    Plush.Run.BuiltIns.Plush
    Plush.Run.BuiltIns.ScriptTools
    Plush.Run.BuiltIns.ShellState
    Plush.Run.BuiltIns.Syntax
    Plush.Run.BuiltIns.Text
    Plush.Run.BuiltIns.Trivial
    Plush.Run.BuiltIns.Utilities
    Plush.Run.BuiltIns.WorkingDirectory
    Plush.Run.Command
    Plush.Run.Execute
    Plush.Run.ExecuteType
    Plush.Run.Expansion
    Plush.Run.Expansion.Arithmetic
    Plush.Run.Expansion.Types
    Plush.Run.Pattern
    Plush.Run.Posix
    Plush.Run.Posix.IO
    Plush.Run.Posix.Return
    Plush.Run.Posix.Utilities
    Plush.Run.Redirection
    Plush.Run.Script
    Plush.Run.ShellExec
    Plush.Run.ShellFlags
    Plush.Run.TestExec
    Plush.Run.Types
    Plush.Run
    Plush.Server
    Plush.Server.API
    Plush.Server.Remote
    Plush.Server.Status
    Plush.Server.Utilities
    Plush.Server.Warp
    Plush.Server.WebServer
    Plush.Types
    Plush.Types.CommandSummary
    Plush.Utilities
    System.Posix.Missing

  Build-depends:
    aeson >= 0.5.0 && < 0.7,
    attoparsec >= 0.8.6 && < 0.11,
    base == 4.*,
    blaze-builder >= 0.3.0 && < 0.4,
    bytestring >= 0.9.1 && < 0.11,
    conduit >= 0.1.1 && < 0.6,
    containers >= 0.4.0 && < 0.6,
    directory >= 1.0.1 && < 1.3,
    file-embed >= 0.0.4 && < 0.1,
    filepath >= 1.2.0 && < 1.4,
    hashable >= 1.1.2 && < 1.3,
    haskeline >= 0.6.2 && < 0.8,
    http-types >= 0.6.7 && < 0.8,
    old-locale >= 1.0 && < 1.1,
    network >= 2.3 && < 2.5,
    network-conduit >= 0.4 && < 0.7,
    time >= 1.4 && < 1.5,
    transformers >= 0.2.2 && < 0.4,
    pretty >= 1.0.1 && <= 1.1.1.0,
    parsec >= 3.0.1 && < 3.2,
    process >= 1.0.1 && < 1.1.1,
    random >= 1.0.0 && < 1.1,
    simple-sendfile >= 0.2.4 && < 0.3,
    text >= 0.11.1 && < 1.12,
    unix >= 2.4.0 && < 2.7,
    unordered-containers >= 0.2.1 && < 0.3,
    wai >= 1.0.0 && < 1.4,
    wai-middleware-route >= 0.2.0 && < 0.8,
    warp >= 1.0.0 && < 1.4

  ghc-options: -Wall -fno-warn-missing-signatures -fwarn-tabs

  if flag(live-files)
    cpp-options: -DLIVE_FILES


Executable plush
  Main-is: Main.hs
  hs-source-dirs: src-main

  Build-depends:
    base,
    plush

  C-sources:
    src-main/main.c

  ghc-options: -no-hs-main -Wall -fno-warn-missing-signatures -fwarn-tabs


Executable recho
  Main-is: Recho.hs
  hs-source-dirs: src src-main

  Other-modules:
    System.Posix.Missing

  Build-depends:
    aeson >= 0.5.0 && < 0.7,
    base == 4.*,
    bytestring >= 0.9.1 && < 0.11,
    containers >= 0.3.0 && < 0.6,
    directory >= 1.0.1 && < 1.3,
    filepath >= 1.2.0 && < 1.4,
    hashable >= 1.1.2 && < 1.3,
    process >= 1.0.1 && < 1.1.1,
    text >= 0.11.1 && < 1.12,
    transformers >= 0.2.2 && < 0.4,
    unix >= 2.4.0 && < 2.7,
    unordered-containers >= 0.2.1 && < 0.3

  ghc-options: -Wall -fno-warn-missing-signatures	-fwarn-tabs
